--- a/wiki-man/1.glob-ih.md
+++ b/wiki-man/1.glob-ih.md
@@ -7,4 +7,29 @@ glob-ih - the helper of identification
 
 # SYNOPSIS
 
-_**glob-ih**_ 
+**glob-ih** -m|--mix [-f sec|--fix=sec] [-v]  
+**glob-ih** -t[timeform]|--time-print[=format] [-f sec|--fix=sec]   
+**glob-ih** -?|--help
+**glob-ih** -V|--version
+
+# DESCRIPTION
+
+**glob-ih** is a helper of identification, when you are trying to upload 
+some thing to your site, and it also can print currrent time in a Haskell
+Data.Time style.
+
+**glob-ih** will hash your password to a time-related token, and a string of time.
+
+# OPTIONS
+
+`-m`, `--mix`
+
+> To mix the input via 'stdin' with token and timestamp, and output them to 'stdout'.
+
+`-t[timeform]`, `--time-print[=timeform]`
+
+> To print the current time. You can change the timestamp form with "timeform", (see TIMEFORM)
+
+`-f sec`, `--fix=sec`
+
+> To fix the delay between diffirent server.
