--- a/wiki-man/1.glob-launch.md
+++ b/wiki-man/1.glob-launch.md
@@ -22,7 +22,7 @@ Both YAML and JSON can be parsed.
 
 # OPTIONS
 
-`-f` file, `--from=`file
+`-f file`, `--from=file`
 
 > The path of config file or just type 'stdin'. If you do not set this flag, the default of this option will be 'stdin'.
 
@@ -30,7 +30,7 @@ Both YAML and JSON can be parsed.
 
 > To print the help of glob-launch.
 
-`-V`|`--version`
+`-V`, `--version`
 
 > To print the version of glob-launch.
 
