--- a/wiki-man/1.glob-launch.md
+++ b/wiki-man/1.glob-launch.md
@@ -43,63 +43,63 @@ And the following is what we need in configure file.
 
 _**port**_
 
-> This one point out the port glob will be listened.
+> This one point out the port glob will be listened. [NUMBER]
 
 _**title**_
 
-> This one point out the title of site.
+> This one point out the title of site. [STRING]
 
 _**password-environment-variable**_
 
 > This one point out, when glob want to find the password of admin,
-> what the environment variable of password is.
+> what the environment variable of password is. [STRING]
 
 _**log-path**_
 
-> This one point out where to write the log of site.
+> This one point out where to write the log of site. [PATH or stdout]
 
 _**listen-type**_
 
 > This one point out the listen type of site, including:
-> any, ipv4, ipv6, ipv4 only, ipv6 only.
+> any, ipv4, ipv6, ipv4 only, ipv6 only. [STRING: *, *4, !4, *6, !6]
 
 _**database**_
 
-> This one, a collection of settings, is about the database settings.
+> This one, a collection of settings, is about the database settings. [STRING]
 
 ## FOR DATABASE
 
 _**hostaddr**_
 
-> The host name or ip address of the database.
+> The host name or ip address of the database. [URL]
 
 _**database**_
 
-> The name of the database which will be used.
+> The name of the database which will be used. [STRING]
 
 _**access-mode**_
 
-> The master mode or the slaver mode.
+> The master mode or the slaver mode. [STRING: master or slaver]
 
 _**username**_
 
-> The name of database' user, which has the right of access, when authentication is needed.
+> The name of database' user, which has the right of access, when authentication is needed. [STRING]
 
 _**password**_
 
-> The password of database's user, which has the right of access, when authentication is needed.
+> The password of database's user, which has the right of access, when authentication is needed. [STRING]
 
 _**pool-stripes**_
 
-> The number of stripes (distinct sub-pools) to maintain.
+> The number of stripes (distinct sub-pools) to maintain. [NUMBER]
 
 _**pool-kept-time**_
 
-> Amount of time for which an unused resource is kept open. 
+> Amount of time for which an unused resource is kept open. [NUMBER]
 
 _**pool-strp-max**_
 
-> Maximum number of resources to keep open per stripe.
+> Maximum number of resources to keep open per stripe. [NUMBER]
 
 # EXAMPLE 
 
