--- a/wiki-man/7.glob-docker.md
+++ b/wiki-man/7.glob-docker.md
@@ -4,9 +4,9 @@
 
 # DESCRIPTION
 
-This page is main about using Glob with Docker. In this page will talk about Docker and Glob.
+This page is mainly about using Glob with Docker. In this page will talk about Docker and Glob.
 
-If you want have a quick start, you can jump to  "**QUICK START**". And if you are interested in config file,
+If you want to xhave a quick start, you can jump to  "**QUICK START**". And if you are interested in config file,
 you need to read **glob-launch(1)**.
 
 You need to know how to use Docker, but if you do not, that's OK. This page is being writen easier.
