add some things

--- a/wiki-man/1.glob-launch.md
+++ b/wiki-man/1.glob-launch.md
@@ -1,13 +1,13 @@
 % glob-launch(1)
-% Qinka <qinka@live.com>
-% 30-Sept-2016
+% Qinka <qinka@live.com> <qinka@qinka.pw>
+% 10-Feb-2017
 
 # NAME
 glob-launch - the launcher of Glob and the main part of Glob
 
 # SYNOPSIS
 
-**glob-launch** [-f|--from[=stdin|FILEPATH]]  
+**glob-launch** [-c|-f|--from[=stdin|FILEPATH]]  
 **glob-launch** -?|--help  
 **glob-launch** -V|--version  
 
@@ -16,13 +16,13 @@ glob-launch - the launcher of Glob and the main part of Glob
 **glob-launch** is the main part of glob and it's also the launcher of Glob. Setting the config file and launch it.
 
 **glob-launch** can load config file from stdin and file. And the default of where config is read is *stdin*. 
-If you want to use file, use the flag `-f` or `--from`.
+If you want to use file, use the flag `-f`, `-c`, or `--config`.
 
 Both YAML and JSON can be parsed.
 
 # OPTIONS
 
-`-f file`, `--from=file`
+`-f file`, `-c file`, `--config=file`
 
 > The path of config file or just type 'stdin'. If you do not set this flag, the default of this option will be 'stdin'.
 
@@ -33,6 +33,14 @@ Both YAML and JSON can be parsed.
 `-V`, `--version`
 
 > To print the version of glob-launch.
+
+`-v`, `--verbose`
+
+> To print the detail when glob-launch running
+
+`-q`, `--quiet`
+
+> To print less when glob-lanuch
 
 # CONFIG FILE
 
@@ -49,10 +57,9 @@ _**title**_
 
 > This one point out the title of site. [STRING]
 
-_**password-environment-variable**_
+_**public-key**_
 
-> This one point out, when glob want to find the password of admin,
-> what the environment variable of password is. [STRING]
+> This one point out the absolute path of the directory where hold the public keys.
 
 _**log-path**_
 
@@ -118,7 +125,7 @@ For here, an example of config file in JSON form:
   , "pool-strp-max":10
   }
 , "title" : "Glob SSSTA"
-, "password-environment-variable" :"GLOB_PSK"
+, "public-key":"/etc/glob/public.key/"
 , "log-path" :"stdout"
 , "listen-type":"*"
 }
@@ -126,10 +133,12 @@ For here, an example of config file in JSON form:
 And we suppose that file is named "config.json".
 The command to run this one is:
 ```shell
-glob-launch -f config.json
+glob-launch -c config.json
 ```
 or
 ```shell
 cat config.json | glob-launch
 ```
 .
+
+And ` +RTS -N -RTS ` will use all processors.
