--- a/wiki-man/1.glob-update.md
+++ b/wiki-man/1.glob-update.md
@@ -17,3 +17,78 @@ glob-update is a tool helping to manage things and generate the Makefile.
 # DESCRIPTION
 
 **glob-update** is a tool to help manage and generate Makefile. The `new` command add item, and the `make` command generate Makefile. 
+
+# NEW ITEM
+
+`glob-update new [-i|--id ID]  [-t|--type TYPE]  [-p|--path URL]  [-c|--title= TITLE]  [-l|--tags= |--tag= {TEXT}]  [-s|--sum= TEXT|FILE]  [--content= ITEM] [-w|--whose AUTH]`
+
+# GENERATE MAKEFILE
+
+To create the general Makefile:
+```shell
+glob-update make basic all > Makefile
+```
+
+To just make up *timecheck*:
+```shell
+glob-update make basic timecheck
+```
+
+To just make up *cleantmp*:
+```shell
+glob-update make basic cleantmp
+```
+
+To just make up *site*:
+```shell
+glob-update make basic site
+```
+
+To just make up *shell*:
+```shell
+glob-update make basic shell
+```
+
+To just make up *site*:
+```shell
+glob-update make basic site
+```
+
+To just make up *shell*:
+```shell
+glob-update make basic shell
+```
+
+To just make up *curl*:
+```shell
+glob-update make basic curl
+```
+
+To just make up *comment*:
+```shell
+glob-update make basic comment
+```
+
+To just make up *change-theme*:
+```shell
+glob-update make basic change-theme
+```
+
+To just make up *change-hightlight*:
+```shell
+glob-update make basic change-highlight
+```
+
+## FOR ITEM
+
+For one item
+```shell
+glob-update make item id
+```
+
+# SOME SCRIPT
+
+To show all the script:
+```shell
+glob-update script all
+```
